--- a/xai-manuscript.tex
+++ b/xai-manuscript.tex
@@ -39,20 +39,50 @@ pcw@case.edu, fxw12@case.edu, cap2.case.edu}
 \maketitle
 
 \begin{abstract}
-    The prevalence of Artificial Intelligence (AI) in many aspects of life has
-    brought about increasing concern and desire for explainability.  This work poses
-    and outlines the implementation of an Explainable Artificial Intelligence data
-    pipeline, comprised of Neural Networks, for recognition of handwritten
-    characters in the EMNIST database. A key challenge for supervised learning and
-    explainability is ambiguous and mislabeled samples in training data.  Techniques
-    are applied to identify some of the issues with ambiguous and mislabeled data in
-    EMNIST.  This paper introduces a neural network architecture which recognizes
-    handwritten characters and produces explanations based on a character property
-    analysis.  A key concept to explainability that is introduced here is correctly
-    pruning the training set in order to improve the explainability and avoid
-    misleading training set labels. The neural network architecture is used to
-    resolve some of the training set issues by leveraging classifications and
-    explanations. Results from the EMNIST character database are provided.
+    % The prevalence of Artificial Intelligence (AI) in many aspects of life has
+    % brought about increasing concern and desire for explainability.  This work poses
+    % and outlines the implementation of an Explainable Artificial Intelligence data
+    % pipeline, comprised of Neural Networks, for recognition of handwritten
+    % characters in the EMNIST database. A key challenge for supervised learning and
+    % explainability is ambiguous and mislabeled samples in training data.  Techniques
+    % are applied to identify some of the issues with ambiguous and mislabeled data in
+    % EMNIST.  This paper introduces a neural network architecture which recognizes
+    % handwritten characters and produces explanations based on a character property
+    % analysis.  A key concept to explainability that is introduced here is correctly
+    % pruning the training set in order to improve the explainability and avoid
+    % misleading training set labels. The neural network architecture is used to
+    % resolve some of the training set issues by leveraging classifications and
+    % explanations. Results from the EMNIST character database are provided.
+
+    The prevalence of Artificial Intelligence (AI), especially Machine Learning
+    (ML), in many aspects of life has brought about increasing concern and
+    desire for explainability.  Good work has been posed in an attempt to
+    interpret the weights of Neural Networks and provide a hint of
+    explainability.  Some methods, such as salience mapping and Gradient
+    weighted Class Activation Mapping, provide a visual explanation by
+    highlighting the portions of input that led to a decision.  This work
+    introduces a partitioning approach to explainability and constructs an
+    explainable data pipeline.  Decision making is distributed among explainable
+    properties and associated neural networks to propose solutions.  The
+    proposed property-based solutions are then combined to make a global
+    decision and provide explainable rationale for the decision related to the
+    properties that contributed to the solution.  The particular explainable
+    pipeline implemented recognizes handwritten characters and produces
+    explanations based on a character property analysis.  This work also
+    approaches scalability by applying the explainable pipeline to a dataset
+    with nearly five times more classes than prior work.  Increasing the accuracy
+    of the pipeline via adding unexplainable solutions.  A metric is introduced
+    that assists in characterizing explainability when an unexplainable
+    component is added to the pipeline. A key challenge for supervised learning
+    and explainability is ambiguous and mislabeled samples in training data.
+    Techniques are applied to identify some of the issues with ambiguous and
+    mislabeled data in EMNIST.  A concept explored in this work involves
+    correctly pruning the training set in order to improve explainability and
+    avoid misleading training set labels.  Samples from the training set that
+    were pruned as label issues are presented back to the explainable pipeline
+    in an attempt resolve issues and relabel them.  Results and explainable
+    rationale from some pruned training set data is presented.
+
 \end{abstract}
 
 \begin{IEEEkeywords}
@@ -60,6 +90,7 @@ pcw@case.edu, fxw12@case.edu, cap2.case.edu}
 \end{IEEEkeywords}
 
 \section{Introduction}
+
 Artificial Intelligence (AI), especially Machine Learning (ML), has been used
 widely in recent years.  Many aspects of human interaction with technology may
 involve AI, e.g, digital assistants, online shopping, and autonomous vehicles.
@@ -69,36 +100,46 @@ a lack of an ability to explain decisions made by a ML system. ML systems
 largely act as an opaque box.  The activity that occurs within the box is hidden
 to humans.  When AI is used in making important decisions there is a strong
 desire to explain why a decision was made.  Some proposed legislation suggests
-that an explanation, suitable for a human, must be provided in decisions made
-by automated systems.  Explainable Artificial Intelligence (XAI) has been a keen
+that an explanation, suitable for a human, must be provided in decisions made by
+automated systems.  Explainable Artificial Intelligence (XAI) has been a keen
 area of interest to DARPA\cite{Gunning_Aha_2019} as well.
+Section~\ref{related_work} discusses related work on ML and XAI.
 
-Handwritten sample datasets, such as the Modified National Institute of
-Standards and Technology database (MNIST)\cite{deng2012mnist}, which consists of
-70,000 samples of handwritten digits, and the Extended MNIST database\cite{cohen2017emnist}
-(EMNIST), which contains over 800,000 samples, serve as
-important datasets that have been utilized widely in ML to evaluate models. The
-datasets are valuable testbeds to leverage for research. Despite the wide use of
-MNIST and EMNIST, there are problems with samples that are ambiguous or
-mislabeled.  These ambiguous and mislabeled samples are especially challenging
-for explainability.
+% Handwritten sample datasets, such as the Modified National Institute of
+% Standards and Technology database (MNIST)\cite{deng2012mnist}, which consists of
+% 70,000 samples of handwritten digits, and the Extended MNIST database\cite{cohen2017emnist}
+% (EMNIST), which contains over 800,000 samples, serve as
+% important datasets that have been utilized widely in ML to evaluate models. The
+% datasets are valuable testbeds to leverage for research. Despite the wide use of
+% MNIST and EMNIST, there are problems with samples that are ambiguous or
+% mislabeled.  These ambiguous and mislabeled samples are especially challenging
+% for explainability.
 
-A property-based XAI methodology\cite{whitten21} provides rationale for
-classification decisions, referencing explainable properties.  In this
-methodology, explainable properties, transformations of data related to the
-explainable properties, and ML models trained against those transformations are
-used to make local classification decisions.  The local, property-based,
-decisions are then combined to make a global decision.  The properties used in
-the global decision contribute rationale for the decision.  This methodology
-achieved acceptable accuracy results with MNIST and was able to provide
-explanations related to explainable properties of the samples.
+A property-based XAI data pipeline is introduced in Section~\ref{method} that
+provides rationale for classification decisions, referencing explainable
+properties.  In this methodology a partitioning approach is taken where,
+explainable properties, transformations of data related to the explainable
+properties, and ML models trained against those transformations are used to make
+pose classification solutions.  The local, property-based, solutions are then
+combined to make a global decision.  The properties used in the global decision
+contribute rationale for the decision.  This methodology achieved acceptable
+accuracy results with MNIST and was able to provide explanations related to
+explainable properties of the samples.  Results from the explainable data
+pipeline using MNIST are presented in Section~\ref{mnist_results}.
 
-This work constructs an XAI data pipeline from the concepts of the
-property-based XAI methodology and attempts to improve on past results by
-leveraging more modern ML models.  This work also applies the pipeline to the
-expansive EMNIST dataset to produce promising results.  Finally, issues with the
-training sets are identified and the pipeline is used in an attempt to resolve
-the issues using classifications and explainability from the pipeline.
+This work explores scaling issues as it applies the explainable data pipeline to
+the expansive EMNIST dataset, with five times more classes than prior work.
+Results of processing EMNIST data is reviewed in Section~\ref{emnist_results}.
+Finally, explainability examples are presented in
+Section~\ref{results:exp}.
+
+In addition to scaling issues with EMNIST, this work explores issues with
+training data from ambiguous and mislabeled samples.  Examples of issues with
+training data is briefly discussed in Section~\ref{related_work}. Pruning
+techniques for mitigating training data issues are outlined in
+Section~\ref{method:pruning}. Section~\ref{results:resolving} discusses the
+results of resolving some training issues using the explainable pipeline to
+produce label corrections with explainable rationale for those corrections.
 
 %% motivation
 \subsection{Motivation}
@@ -107,18 +148,18 @@ Current Neural Networks (NN) and ML models do not explain or justify decisions
 in a manner suitable to present to a human user.  There is currently no
 algorithm that can take weights of NN and justify decisions to a human.
 
-This work seeks to improve on a property-based XAI methodology and construct an
-explainable data pipeline. The aim is to increase recognition accuracy while
+This work introduces and constructs an
+explainable data pipeline with the aim of recognizing handwritten characters while
 providing a human understandable explanation for decisions.
 
-This work utilizes EMNIST and outlines the experiences and challenges of the
-expanded character dataset.  A key challenge in explainability is resolving
-ambiguous and mislabeled samples in the expanded dataset.  Some label issues in
-the EMNIST dataset are identified.  The identified samples with label issues are
-input to the explainable pipeline in an attempt to resolve the issues with an
-explanation.
+A key challenge in explainability is resolving ambiguous and mislabeled samples
+in the expanded dataset.  Experiences and challenges of utilizing the expanded
+character dataset EMNIST are outlined.  This work attempts to prune some
+training label issues to achieve better results.  There is a desire to resolve
+label issues in a transparent way, providing an explanation for the resolution.
 
 \section{Related Work}
+\label{related_work}
 
 \subsection{Neural Networks}
 
@@ -141,7 +182,6 @@ feature importance, fuzzy-based, neural-network, and genetic-programming based.
 These techniques use one of three basic evaluation approaches:
 application-grounded, human-grounded and functionally grounded
 \cite{Arrieta2020ExplainableAI,Survey18,Fuzzy19,Hagras18,GP18}.
-
 
 There has been work done by Vilone and Longo \cite{vilone2020explainable} to
 further characterize XAI techniques.  The XAI methodology from \cite{whitten21}
@@ -349,6 +389,7 @@ datasets.  This research utilizes Cleanlab in some of the pruning techniques.
 
 %% Method
 \section{Method}
+\label{method}
 
 \subsection{Property-Based XAI Methodology}
 
@@ -484,7 +525,7 @@ implementation used Resnet50 models.
 Before using the explainable pipeline, the MLP, CNN, and Resnet50 models were
 trained and tested on untransformed data to establish a baseline for
 unexplainable recognition.  The results are outlined in Table
-\ref{tab_unexplainable accuracy_results}.
+\ref{tab_unexplainable_accuracy_results}.
 
 After applying the XAI pipeline to the balanced EMNIST dataset, a significant
 degradation in accuracy was observed in comparison to the unexplainable results.
@@ -499,6 +540,7 @@ dataset, additional unexplainable and explainable baselines were obtained for
 later comparison in Sec. \ref{emnist_results}.
 
 \subsection{Explainability Metric for Unexplainable Components}
+\label{method:metric}
 
 A strategy for improving the accuracy of the pipeline, at the cost of
 explainability, is to add a NN to the inferencing stage that will be trained on
@@ -527,6 +569,7 @@ vote was contributed by an unexplainable NN for class $d$.
 \end{equation}
 
 \subsection{Removing Ambiguous Data}
+\label{method:pruning}
 
 In an attempt improve explainable results, the removal of ambiguous and
 mislabeled data was explored. Data and pruning of the training and test sets
@@ -579,8 +622,10 @@ Cleanlab was also used iteratively with three passes and results are reviewed in
 \ref{emnist_results}.
 
 \section{Results}
+\label{results}
 
 \subsection{MNIST Results}
+\label{mnist_results}
 
 Accuracy achieved in \cite{whitten21} was 91.9\% with 100\% explainability on
 handwritten digits. Utilizing an unexplainable component, consisting of the
@@ -596,7 +641,7 @@ average explainability metric, $X_d$, was reduced to 79\%.
 \subsection{EMNIST Results}
 \label{emnist_results}
 
-Table~\ref{tab_unexplainable accuracy_results} shows the accuracy results using
+Table~\ref{tab_unexplainable_accuracy_results} shows the accuracy results using
 only the indicated NN on the various EMNIST datasets.  Note that the accuracy
 results are only using the base images without transformation and a single NN.
 On the full balanced dataset, with 46 classes, Resent50 and the CNN performed
@@ -626,17 +671,18 @@ utilized requires a minimum input of 32x32.
         \hline
     \end{tabular}
     }
-    \label{tab_unexplainable accuracy_results}
+    \label{tab_unexplainable_accuracy_results}
 \end{table}
 
 Table \ref{tab_explainable accuracy_results} shows the explainable accuracy
-results on the unpruned data. Compared to Table \ref{tab_unexplainable
-accuracy_results} the results are lower.  As expected, there appears to be a
-cost in decreased accuracy for explainability. %TODO: add more details here.
+results on the unpruned data. Compared to Table
+\ref{tab_unexplainable_accuracy_results} the results are lower.  As expected,
+there appears to be a cost in decreased accuracy for explainability.
+%TODO: add more details here.
 
 In the explainable results, Tab.~\ref{tab_explainable accuracy_results}, the
 Resnet50 models appeared to perform better with the full EMNIST dataset and
-uppercase characters.ß
+uppercase characters.
 
 \begin{table}
     \centering
@@ -776,6 +822,7 @@ for the classes of interest after the third Cleanlab pruning.
 
 
 \subsection{Explainability Results}
+\label{results:exp}
 
 %We can show that since we are using the probabilistic voting that explainability quality is 100\%.
 %Can we introduce other metrics?
@@ -950,7 +997,8 @@ Table \ref{table:exexample2} shows the explainability for example 2.  In this ca
     \item Confidence is low for interpreting as a O due to circle properties.
 \end{itemize}
 
-\subsection{Inferencing Mislabeled Pruned Data}
+\subsection{Resolving Mislabeled Pruned Data}
+\label{results:resolving}
 
 Images pruned from the training set due to issues such as mislabeled or
 ambiguous samples after one Cleanlab pruning were submitted back to the system.  
@@ -1169,7 +1217,7 @@ stroke, endpoint, area, and line properties.  Relevant transforms are depicted i
 
 %Fig.~\ref{fig:inf_issue_O10}, originally labeled as an O was inferred correctly as an F with 40\% confidence.
 
-Clearly the quality of the training set is a big concern with NN and XAI.  The
+The quality of the training set is a big concern with NN and XAI.  The
 pruning methods we present attempts to improve the quality of the training set
 to enhance accuracy and explainability. The XAI pipeline benefits in two ways,
 (a) it was able to correct the problematic, pruned labels with a good degree of
@@ -1177,6 +1225,7 @@ confidence, in some cases (b) the XAI pipeline provided rationale based on
 explainable properties that could help a user resolve issues with labels.
 
 \section{Conclusion}
+\label{conclusion}
 
 %Achieved acceptable accuracy results.  Explainability based on properties and trust in the system.
 
@@ -1188,13 +1237,18 @@ explainable properties that could help a user resolve issues with labels.
 
 %This paper introduces a neural network architecture which recognizes handwritten characters and produces explanations based on a character property analysis.
 
-This paper introduced an XAI data pipeline for recognizing handwritten
-characters. This work identified and pruned issues in the EMNIST dataset.  The
-XAI pipeline was used to resolve some of the issues by leveraging
-classifications and explanations.  A key concept to explainability that is
-introduced here is correctly pruning the training set in order to improve the
-explainability and avoid misleading training set labels. Results from the EMNIST
-character database are provided.
+This work introduced an XAI data pipeline for recognizing handwritten
+characters.  This work increased the accuracy of the pipeline by adding highly
+accurate but unexplainable components. A metric is introduced that assists in
+characterizing explainability when unexplainable components is added to the
+pipeline. The expansive EMNIST dataset was studied for explainable recognition
+of characters and some challenges with training data were identified.  A key
+concept to explainability that is introduced is correctly pruning the training
+set in order to improve the explainability and avoid misleading training set
+labels.  Results processing the EMNIST character database using the XAI data
+pipeline are provided. The XAI pipeline was also used to resolve some of the
+training set issues, leveraging explanations to increase confidence of new
+labels.
 
 \bibliographystyle{plain}
 \bibliography{references}
